--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,5 @@
-
-spring.h2.console.path=/h2
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.url=jdbc:h2:mem:testdb;NON_KEYWORDS=USER
-spring.h2.console.enabled=true
-spring.data.jpa.repositories.bootstrap-mode=default
-spring.jpa.defer-datasource-initialization=true
-spring.datasource.generate-unique-name=false
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/jpa-learn
+spring.datasource.username=root
+spring.datasource.password=13271327
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
