--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/jpa-learn
 spring.datasource.username=root
 spring.datasource.password=13271327
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.show-sql=true
