--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/jpa-learn
+spring.datasource.url=jdbc:mysql://localhost:3306/testSchema
 spring.datasource.username=root
 spring.datasource.password=13271327
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
